# Sillinger

./: README.md  players.csv  pyproject.toml
app/: __init__.py  players-2024-08-17_09-16-31.csv  players.csv  sillinger.py  teams.json
data/: players-24-working.xlsx  players-24.csv
