[tool.poetry]
name = "sillinger"
version = "0.1.0"
description = ""
authors = ["Kyle Huberman <kylehuberman@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyscipopt = "^5.1.1"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
